# python-project-lvl3

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
page_loader/: cli.py  downloader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
