[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Влад Гуштын <vladislav3372@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
