[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Влад Гуштын <vladislav3372@gmail.com>"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
